--- a/public/index.html
+++ b/public/index.html
@@ -10,47 +10,44 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script> <!-- Socket.IO framework -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script> <!-- Vue Framework -->
 
-    <title>Game Lobby</title>
+    <title>Quizzical</title>
   </head>
 
   <body>
     <h1>Quizzical</h1>
-    <h2>Game Lobby</h2>
-
     <!-- Set up player name and start the game -->
     <div id="app">
-      <div>
-        <h3>What is your name?</h3>
+<!----------------------------------------------------------------------------------------->
+      <div id="playerNameDiv" v-show="playerNameDiv">
+        <h2>Welcome to Quizzical</h2>
+        <h3>What would you like to be known as?</h3>
         <form @submit="setPlayerName">
           <input type="text" placeholder="Enter Player Name Here" v-model="playerName" />
-          <button>Quiz Me!</button>
+          <button @click="questionsAnswers = true; playerNameDiv = false; instructionsDiv = false">Quiz Me!</button>
+          <button @click="questionsAnswers = false; playerNameDiv = false; instructionsDiv = true">Instructions</button>
         </form>
       </div>
-
+<!----------------------------------------------------------------------------------------->
       <!-- Select answers to questions -->
-      <div id="questionsAnswers">
-        <div>
+      <div id="questionsAnswers" v-show="questionsAnswers">
+        <div id="answers">
           <h3> {{ question }} </h3>
-          <div class="row">
-            <div v-for="answer in answers"> <!-- Loop through and display answers -->
-              <div id="answers">
-                <div @click="pickAnswer(answer)">
-                  <button id="answerbtn"> {{ answer.text }} </button>
-                </div>
-              </div>
+          <div v-for="answer in answers"> <!-- Loop through and display answers -->
+            <div @click="pickAnswer(answer)">
+              <button id="answerbtn"> {{ answer.text }} </button>
             </div>
           </div>
         </div>
-
-        <!-- Display Points Scored -->
+<!----------------------------------------------------------------------------------------->
+        <!-- Display Points Scored by the Player -->
         <div id="scoreBoard">
           <h3>Scorecard</h3>
-            <h4> {{ playerName }}: </h4> <!-- Playername and points scored -->
+            <p> {{ playerName }}: </p>
             <p>  <!-- How many questions has the user got correct? -->
               {{ score != 0 ? score : 'No' }} correct answer{{ score != 1 ? 's' : '' }}.
             </p>
         </div>
-
+<!----------------------------------------------------------------------------------------->
         <!-- Display other players -->
         <div id="livePlayers">
           <h3>Live Players</h3>
@@ -62,17 +59,24 @@
               </tr>
             <tbody>
               <!-- Display player name, their score & index -->
-              <tr v-for="(player, key, index) in currentPlayers">
+              <tr v-for="(player, key, index) in otherPlayers">
                 <td> {{ player.playerName }} </td>
                 <td> {{ player.score }} </td>
               </tr>
             </tbody>
           </table>
         </div>
+        <!-- Hide questions&answers div and show enter name div -->
+        <button @click="questionsAnswers = false; playerNameDiv = true; instructionsDiv = false">Restart</button>
+      </div>
+<!----------------------------------------------------------------------------------------->
+      <!-- Displaying the Instructions of the game -->
+      <div id="instructionsDiv" v-show="instructionsDiv">
+        <h2>Instructions</h2>
+        <button @click="questionsAnswers = false; playerNameDiv = true; instructionsDiv = false">Return</button>
       </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<!----------------------------------------------------------------------------------------->
     <script src="JavaScript/index.js"></script> <!-- External Javascript file storing Vue JS -->
   </body>
 </html>
